--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "clear",
+  "name": "backend_ti41",
   "version": "1.0.0",
-  "main": "app/index.js",
+  "description": "backend",
+  "license": "MIT",
+  "author": "Mich",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "set PORT=3001 && node app/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --watch app/index.js"
   },
-  "author": "Mich Carrau",
-  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -16,6 +17,5 @@
     "mariadb": "^3.4.0",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5"
-  },
-  "description": ""
+  }
 }
